--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,6 @@
       <a href="https://github.com/iamstefanstoyanov">Stefan Stoyanov</a>
     </footer>
 
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
